Fix: URL didn't work properly on mobile Add: Remind user when font file is not available

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -639,6 +639,9 @@ table#lang_list span {
 	left: 50%;
 }
 
+#spanfontfailed {font-size:smaller;display: none;color: darkorange;}
+#spanfontloading {font-size:smaller;display: none;}
+
 .options-mobile:before {
 	border-top: 5px solid transparent;
 }
